Bug 440024 - Shortcuts for got to clip start/end only works for selected clips
Summary: Shortcuts for got to clip start/end only works for selected clips
Status: RESOLVED FIXED
Alias: None
Product: kdenlive
Classification: Applications
Component: User Interface & Miscellaneous (other bugs)
Version First Reported In: 21.04.3
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Jean-Baptiste Mardelle
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-07-19 06:06 UTC by Anders Lund
Modified: 2021-11-16 14:06 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 21.12.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Anders Lund 2021-07-19 06:06:39 UTC
The shortcuts for "Go to clip start" (Home) and "Go to clip end" (End) only works for selected clips - in fact they point to the start/end of the latest selected clip. I believe they should work for any clip on the current track. They are not disabled in the project monitor rightclick menu if there is no clip selected, and it would be logically if they worked as a complemention to ctrl + left/right to facilitate efficient navigation of the timeline.

STEPS TO REPRODUCE
1. Open a project with some clips none of which are selected.
2. Place the playhead over a clip.
3. press the Home or End key.

OBSERVED RESULT
Noting happens

EXPECTED RESULT
The playhead should move to the start/end of the clip under the playhead.

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: current (Arch Linux, up to date)
(available in About System)
KDE Plasma Version: 5.22.3
KDE Frameworks Version: 5.84.0
Qt Version: 5.15.2
Comment 1 Julius Künzel 2021-11-16 14:06:19 UTC
Git commit 21cd94995de06a05b223909688aaf623107ab42f by Julius Künzel.
Committed on 16/11/2021 at 12:21.
Pushed by jlskuz into branch 'release/21.12'.

"Go to clip start/end" should use clip under cursor if none is selected
FIXED-IN: 21.12.0

M  +13   -5    src/timeline2/view/timelinecontroller.cpp
M  +1    -1    src/timeline2/view/timelinecontroller.h

https://invent.kde.org/multimedia/kdenlive/commit/21cd94995de06a05b223909688aaf623107ab42f