"Go to clip start/end" should use clip under cursor if none is selected

BUG: 440024
FIXED-IN: 21.12.0